--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 Hoh:
 
+-Change b4w model from link to iframe
 -3D model thumbnailing
--Why is main.css not updating on the server? //urgent
--Fix tooltips so they do not create a void at the bottom of the page
+-Fix tooltips so they do not create a void at the bottom of the page //partly fixed with css
 -Finish the transfer calculator
 -Make the old scripts less ugly
 -Create SVG illustrations for the learn page
@@ -10,3 +10,7 @@ Hoh:
 -Add more to the learn page introduction to orb mec
 -Check if the new email is working
 -Migrate navbar from absolute width
+
+SOLVED:
+
+-Why is main.css not updating on the server? //urgent
