just keep swimming...
Former-commit-id: 26fb6597d37aa35c53ff712b78598b279ab2ceb9

--- a/_posts/2016-02-04-test-test.md
+++ b/_posts/2016-02-04-test-test.md
@@ -10,9 +10,7 @@ blogger_id: tag:blogger.com,1999:blog-2741304674651227490.post-85499752536657308
 blogger_orig_url: http://moonwards1.blogspot.com/2016/02/test-test.html
 ---
 
+
 Test, test Let's say you have enough infrastructure on the Moon to fabricate
-really good mirrors, small motors, and pivoting joints in bulk. And you make
-10 km2 of mirrors and set them up outside so you can very accurately point them.
-That's 12 GW of sunlight to throw around, accounting for some inefficiency in
-the mirrors - if your target is at a small angle to the sun from the mirror's
-position.
+really good mirrors, small motors, and pivoting joints in bulk. seriously,
+is this even updating?
