better iframe embedding
Former-commit-id: 94d592c914bdfcd071d680b8036debf84ad67466 [formerly e52ebd7fdb4d9da5315b115c58005ae20c83856f]
Former-commit-id: 3e195ba0ea036ec0297af7ad14c9e1c5f56d5ec5

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ Hoh:
 -Add more to the learn page introduction to orb mec
 -Embed youtube video somehow to avoid overhead
 -Test fakesmile in IE
+-Plot engines in engine list
+-Get pellet graphics
 
 SOLVED:
 
